# vault-keeper

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
config/: tsconfig.app.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: auth.rs  clipboard.rs  export_import.rs  icloud.rs  icon.rs  mod.rs  settings.rs  vault.rs
src-tauri/src/crypto/: argon2.rs  backup.rs  hasher.rs  keychain.rs  mod.rs
src-tauri/src/db/: connection.rs  entries.rs  metadata.rs  migrations.rs  mod.rs
src/components/: AuthGate.tsx  PasswordStrength.tsx  SetupView.tsx  UnlockView.tsx
src/components/common/: Button.tsx  ConfirmDialog.tsx  CopyButton.tsx  Input.tsx  Modal.tsx  Spinner.tsx  Toast.tsx
src/components/forms/: EntryForm.tsx  PasswordGenerator.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/settings/: BackupSection.tsx  IcloudSection.tsx  SettingsView.tsx  ShortcutRecorder.tsx
src/components/vault/: EmptyState.tsx  EntryCard.tsx  EntryDetail.tsx  EntryList.tsx  SearchBar.tsx  VaultView.tsx
src/hooks/: useDebounce.ts
src/lib/: clipboard.ts  formatters.ts  templates.ts
src/stores/: authStore.ts  entryStore.ts  uiStore.ts
src/types/: auth.ts  common.ts  entry.ts
