[package]
name = "vault-keeper"
version = "0.1.1"
description = "Vault Keeper - Secure local vault for API keys, passwords, and sensitive info"
authors = ["duangduang55"]
license = "MIT"
repository = "https://github.com/duangduang55/vault-keeper"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# SQLCipher
rusqlite = { version = "0.31", features = ["sqlcipher", "bundled"] }

# Crypto
argon2 = "0.5"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
hex = "0.4"
constant_time_eq = "0.3"

# Utilities
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
png = "0.17"
tokio = { version = "1", features = ["rt", "time"] }
time = { version = "0.3", features = ["local-offset", "formatting"] }

# Clipboard
arboard = "3"
